Support JDK 11